--- a/project/templates/hello.html
+++ b/project/templates/hello.html
@@ -15,6 +15,6 @@
     <!-- scripts -->
     <script src="{{ url_for('static', filename='bower_components/react/react.min.js') }}"></script>
     <script src="{{ url_for('static', filename='bower_components/react/react-dom.min.js') }}"></script>
-
+		<script src="{{ url_for('static', filename='scripts/js/hello.js') }}"></script>
   </body>
 </html>
